--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <title>Rosie</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Rosie</title>
 </head>
+
 <body>
-<header>
+	<header>
+		<div class="row no-gutters">
+			<a class="col-md-4 logo" href="index.html"></a>
+			<div class="col-md-8">
+				<div class="row bg-color-name-title no-gutters">
+					<div class="col heading">
+						<h1 class="name">Rosie Odenkirk</h1>
+						<h2 class="title">Full Stack Developer</h2>
+					</div>
+				</div>
+				<div class="row no-gutters">
+					<div class="col">
+						<ul id="nav" class="list-inline menucontainer">
+							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
+								<a href="#"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+							</li>
+							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
+								<a href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+							</li>
+							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
+								<a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+							</li>
+							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
+								<a href="#"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+							</li>
+						</ul>
 
-</header>
-<section>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<section>
 
-</section>
-<footer>
+	</section>
+	<footer>
 
-</footer>
-    
+	</footer>
 </body>
+
 </html>
