--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 		type="text/css" />
 	<link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+		integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+		crossorigin="anonymous" />
 	<title>Rosie</title>
 </head>
 
@@ -29,16 +31,20 @@
 					<div class="col">
 						<ul id="nav" class="list-inline menucontainer">
 							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-							<a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+								<a href="#"
+									class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
 							</li>
 							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-								<a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+								<a href="#"
+									class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
 							</li>
 							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-								<a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+								<a href="#"
+									class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
 							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-								<a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+								<a href="#"
+									class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
 							</li>
 						</ul>
 
@@ -50,8 +56,18 @@
 	<section>
 
 	</section>
-	<footer>
-
+	<footer class="container-fluid">
+    <div class="row">
+    <div class="col-sm-4">
+    <h5>About</h5>
+    </div>
+    <div class="col-sm-4">
+    
+    </div>
+    <div class="col-sm-4">
+    
+    </div>
+    </div>
 	</footer>
 </body>
 
