--- a/index.html
+++ b/index.html
@@ -57,17 +57,71 @@
 
 	</section>
 	<footer class="container-fluid">
-    <div class="row">
-    <div class="col-sm-4">
-    <h5 class="uppercase general-sub">About</h5>
-    </div>
-    <div class="col-sm-4">
-    <h5 class="uppercase general-sub">Download</h5>
-    </div>
-    <div class="col-sm-4">
-    <h5 class="uppercase general-sub">Social</h5>
-    </div>
-    </div>
+		<div id="footer-details" class="row">
+			<div class="col-sm-4">
+				<h5 class="uppercase general-sub">About</h5>
+				<p class="inline-block">
+					Full Stack Web Developer in training. Has a beginners grasp of HTML and CSS. The capacity to learn
+					on the fly.
+				</p>
+			</div>
+			<div class="col-sm-4">
+				<h5 class="uppercase general-sub">Download</h5>
+				<p class="inline-block">
+					Need a printable version of my CV? Download it here.
+					<a href="#" target="_blank" class="cv-pdf">
+						<i class="fa fa-download" aria-hidden="true"></i>
+						<span class="sr-only">Download link.</span>
+					</a>
+				</p>
+			</div>
+			<div class="col-sm-4">
+				<h5 class="uppercase general-sub">Social</h5>
+				<ul class="list-inline social-links">
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.facebook.com">
+							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<span class="sr-only">Facebook</span>
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.twitter.com">
+							<i class="fa fa-twitter" aria-hidden="true"></i>
+							<span class="sr-only">Twitter</span>
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.linkedin.com">
+							<i class="fa fa-linkedin" aria-hidden="true"></i>
+							<span class="sr-only">Linkedin</span>
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.pinterest.com">
+							<i class="fa fa-pinterest" aria-hidden="true"></i>
+							<span class="sr-only">Pinterest</span>
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.instagram.com">
+							<i class="fa fa-instagram" aria-hidden="true"></i>
+							<span class="sr-only">Instagram</span>
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.youtube.com">
+							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<span class="sr-only">Youtube</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</footer>
 </body>
 
