--- a/index.html
+++ b/index.html
@@ -1,128 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+      integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+      crossorigin="anonymous"
+    />
+    <title>Rosie</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
-		integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
-		crossorigin="anonymous" />
-	<title>Rosie</title>
-</head>
+  <body>
+    <header>
+      <div class="row no-gutters">
+        <a class="col-md-4 logo" href="index.html"></a>
+        <div class="col-md-8">
+          <div class="row bg-color-name-title no-gutters">
+            <div class="col heading">
+              <h1 class="name">Rosie Odenkirk</h1>
+              <h2 class="title">Full Stack Developer</h2>
+            </div>
+          </div>
+          <div class="row no-gutters">
+            <div class="col">
+              <ul id="nav" class="list-inline menucontainer">
+                <li
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
+                >
+                  <a href="#" class="hvr-sweep-to-bottom"
+                    ><i class="fa fa-home" aria-hidden="true"></i
+                    ><span>Home</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem"
+                >
+                  <a href="#" class="hvr-sweep-to-bottom"
+                    ><i class="fa fa-graduation-cap" aria-hidden="true"></i
+                    ><span>Resume</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem"
+                >
+                  <a href="#" class="hvr-sweep-to-bottom"
+                    ><i class="fa fa-comment-o" aria-hidden="true"></i
+                    ><span>Contact</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem"
+                >
+                  <a href="#" class="hvr-sweep-to-bottom"
+                    ><i class="fa fa-download" aria-hidden="true"></i
+                    ><span>Download</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section>
+      <section class="container-fluid">
+        <div class="row row-table">
+          <div class="col-md-8 bg-color-three-reasons section-column">
+            <div class="row">
+              <div class="col">
+                <h3 class="section-heading uppercase">About Me</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <footer class="container-fluid">
+      <div id="footer-details" class="row">
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">About</h5>
+          <p class="inline-block">
+            Full Stack Web Developer in training. Has a beginners grasp of HTML
+            and CSS. The capacity to learn on the fly.
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Download</h5>
+          <p class="inline-block">
+            Need a printable version of my CV? Download it here.
+            <a href="#" target="_blank" class="cv-pdf">
+              <i class="fa fa-download" aria-hidden="true"></i>
+              <span class="sr-only">Download link.</span>
+            </a>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Social</h5>
+          <ul class="list-inline social-links">
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.facebook.com">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+            </li>
 
-<body>
-	<header>
-		<div class="row no-gutters">
-			<a class="col-md-4 logo" href="index.html"></a>
-			<div class="col-md-8">
-				<div class="row bg-color-name-title no-gutters">
-					<div class="col heading">
-						<h1 class="name">Rosie Odenkirk</h1>
-						<h2 class="title">Full Stack Developer</h2>
-					</div>
-				</div>
-				<div class="row no-gutters">
-					<div class="col">
-						<ul id="nav" class="list-inline menucontainer">
-							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-								<a href="#"
-									class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
-							</li>
-							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-								<a href="#"
-									class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
-							</li>
-							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-								<a href="#"
-									class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
-							</li>
-							<li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-								<a href="#"
-									class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
-							</li>
-						</ul>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.twitter.com">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <span class="sr-only">Twitter</span>
+              </a>
+            </li>
 
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<section>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.linkedin.com">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">Linkedin</span>
+              </a>
+            </li>
 
-	</section>
-	<footer class="container-fluid">
-		<div id="footer-details" class="row">
-			<div class="col-sm-4">
-				<h5 class="uppercase general-sub">About</h5>
-				<p class="inline-block">
-					Full Stack Web Developer in training. Has a beginners grasp of HTML and CSS. The capacity to learn
-					on the fly.
-				</p>
-			</div>
-			<div class="col-sm-4">
-				<h5 class="uppercase general-sub">Download</h5>
-				<p class="inline-block">
-					Need a printable version of my CV? Download it here.
-					<a href="#" target="_blank" class="cv-pdf">
-						<i class="fa fa-download" aria-hidden="true"></i>
-						<span class="sr-only">Download link.</span>
-					</a>
-				</p>
-			</div>
-			<div class="col-sm-4">
-				<h5 class="uppercase general-sub">Social</h5>
-				<ul class="list-inline social-links">
-					<li class="list-inline-item">
-						<a target="_blank" href="https://www.facebook.com">
-							<i class="fa fa-facebook" aria-hidden="true"></i>
-							<span class="sr-only">Facebook</span>
-						</a>
-					</li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.pinterest.com">
+                <i class="fa fa-pinterest" aria-hidden="true"></i>
+                <span class="sr-only">Pinterest</span>
+              </a>
+            </li>
 
-					<li class="list-inline-item">
-						<a target="_blank" href="https://www.twitter.com">
-							<i class="fa fa-twitter" aria-hidden="true"></i>
-							<span class="sr-only">Twitter</span>
-						</a>
-					</li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.instagram.com">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <span class="sr-only">Instagram</span>
+              </a>
+            </li>
 
-					<li class="list-inline-item">
-						<a target="_blank" href="https://www.linkedin.com">
-							<i class="fa fa-linkedin" aria-hidden="true"></i>
-							<span class="sr-only">Linkedin</span>
-						</a>
-					</li>
-
-					<li class="list-inline-item">
-						<a target="_blank" href="https://www.pinterest.com">
-							<i class="fa fa-pinterest" aria-hidden="true"></i>
-							<span class="sr-only">Pinterest</span>
-						</a>
-					</li>
-
-					<li class="list-inline-item">
-						<a target="_blank" href="https://www.instagram.com">
-							<i class="fa fa-instagram" aria-hidden="true"></i>
-							<span class="sr-only">Instagram</span>
-						</a>
-					</li>
-
-					<li class="list-inline-item">
-						<a target="_blank" href="https://www.youtube.com">
-							<i class="fa fa-youtube" aria-hidden="true"></i>
-							<span class="sr-only">Youtube</span>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</footer>
-</body>
-
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.youtube.com">
+                <i class="fa fa-youtube" aria-hidden="true"></i>
+                <span class="sr-only">Youtube</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
