--- a/index.html
+++ b/index.html
@@ -85,6 +85,65 @@
                 <h3 class="section-heading uppercase">About Me</h3>
               </div>
             </div>
+            <div class="row">
+              <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                <div class="row">
+                  <div class="col-2">
+                    <i
+                      class="three-reasons-icon fa fa-question"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                  <div class="col-10">
+                    <h4 class="three-reasons-heading uppercase">
+                      What Do I Do?
+                    </h4>
+                    <p>
+                      Great coder, super smart! 134 IQ! lots of mad skills. Hire
+                      me!! do it! do it now!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                <div class="row">
+                  <div class="col-2">
+                    <i
+                      class="three-reasons-icon fa fa-bolt"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                  <div class="col-10">
+                    <h4 class="three-reasons-heading uppercase">
+                      How Do I Do It?
+                    </h4>
+                    <p>
+                      Great coder, super smart! 134 IQ! lots of mad skills. Hire
+                      me!! do it! do it now!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                <div class="row">
+                  <div class="col-2">
+                    <i
+                      class="three-reasons-icon fa fa-thumbs-up"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                  <div class="col-10">
+                    <h4 class="three-reasons-heading uppercase">
+                      Why Hire Me?
+                    </h4>
+                    <p>
+                      Great coder, super smart! 134 IQ! lots of mad skills. Hire
+                      me!! do it! do it now!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
