--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@
                   </div>
                   <div class="col-10">
                     <h4 class="three-reasons-heading uppercase">
-                      Fron End
+                      Front End
                     </h4>
                     <p>
                       I turn cigarettes and coffee into code!. Hire me!! do it!
