--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,15 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Rosie</title>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_mkVcD6ahAAjeP9Zyw2hOB");
+     
+   })();
+</script>
   </head>
 
   <body>
@@ -86,7 +95,8 @@
             </h3>
             <h5 class="text-center uppercase">Lets work together!</h5>
             <div class="center-form">
-              <form>
+
+              <form onsubmit="return sendMail(this);">
                 <input
                   type="text"
                   name="name"
@@ -191,5 +201,6 @@
         </div>
       </div>
     </footer>
-  </body>
+    <script src="assets/js/sendEmail.js"></script> 
+  </body> 
 </html>
